<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textStart"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/str_start"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Func"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_interval"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Sign_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_interval_1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/interval_1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    android:windowSoftInputMode="adjustPan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Sign_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_interval_2"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/interval_2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    android:windowSoftInputMode="adjustPan" />
            </LinearLayout>

            <TextView
                android:id="@+id/OrderNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_OrderNumberText"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/OrderNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:windowSoftInputMode="adjustPan" />

            <Button
                android:id="@+id/Find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_find" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="250sp" />

            <TextView
                android:id="@+id/textAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/str_answerText" />

            <TextView
                android:id="@+id/Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>